filtrar clientes y data table

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-datatables": "^4.4.0",
     "core-js": "^2.4.1",
+    "datatables.net": "^1.10.16",
+    "datatables.net-dt": "^1.10.16",
     "jqwidgets-framework": "^5.2.0",
     "popper.js": "^1.12.2",
     "rxjs": "^5.4.1",
@@ -31,8 +34,10 @@
     "@angular/cli": "1.2.7",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
+    "@types/datatables.net": "^1.10.6",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.13",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
