--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "datatables.net": "^1.10.16",
     "datatables.net-dt": "^1.10.16",
     "jqwidgets-framework": "^5.4.0",
+    "ngx-currency-mask": "^4.3.2",
     "popper.js": "^1.12.2",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
