--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "core-js": "^2.4.1",
     "datatables.net": "^1.10.16",
     "datatables.net-dt": "^1.10.16",
+    "html2canvas": "^0.5.0-beta4",
     "jqwidgets-framework": "^5.4.0",
+    "jspdf": "^1.3.5",
+    "ng2-pdf-viewer": "^2.0.3",
     "ngx-currency-mask": "^4.3.2",
     "popper.js": "^1.12.2",
     "rxjs": "^5.4.1",
@@ -41,6 +44,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.2.13",
+    "@types/jspdf": "^1.1.31",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
